@@ -1,6 +1,4 @@
 # Target: Mitsubishi D10V processor
 TDEPFILES= d10v-tdep.o
-TM_FILE= tm-d10v.h
-
 SIM_OBS= remote-sim.o
 SIM= ../sim/d10v/libsim.a
