@@ -318,5 +318,6 @@ esac
 # map GDB target onto multi-arch support
 
 case "${gdb_target}" in
+d10v)		gdb_multi_arch=yes ;;
 m68hc11)	gdb_multi_arch=yes ;;
 esac
