@@ -1,3 +1,9 @@
+2001-07-11  Andrew Cagney  <ac131313@redhat.com>
+
+	* configure.tgt: Mark d10v as pure multi-arch.
+	* config/d10v/tm-d10v.h: Delete file.
+	* config/d10v/d10v.mt (TM_FILE): Delete.
+
 2001-07-10  Andrew Cagney  <ac131313@redhat.com>
 
 	* serial.h (typedef serial_t): Delete. Replace all references to
